# pyfebio

./: .buildinfo  .gitattributes  .gitignore  README.md  examples.html  genindex.html  index.html  introduction.html  modules.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js
.doctrees/: environment.pickle  examples.doctree  index.doctree  introduction.doctree  modules.doctree
.github/workflows/: publish.yml  sphinx-build.yml  test.yml
_sources/: examples.rst.txt  index.rst.txt  introduction.rst.txt  modules.rst.txt  pyfebio.rst.txt
docs/: conf.py  examples.rst  index.rst  introduction.rst  modules.rst
src/examples/: biphasic_hex20.py  contact.py  elastic_hex20.py  mesh_adapt.py  three_cylinder_joint.py
src/pyfebio/: __init__.py  _types.py  boundary.py  constraints.py  contact.py  control.py  discrete.py  globals.py  initial.py  loaddata.py  loads.py  material.py  mesh.py  meshadaptor.py  meshdata.py  meshdomains.py  model.py  output.py  rigid.py  step.py
src/scripts/: short_example.py
src/tests/: conftest.py  test_contact.py  test_material.py  test_mesh.py  test_meshadaptor.py  test_model.py
