[project]
name = "pyfebio"
version = "0.1.0"
description = "A Python API for the FEBio finite element solver."
readme = "README.md"
requires-python = ">=3.13"
authors = [{ name = "Scott Sibole", email = "scott.sibole@gmail.com" }]
dependencies = [
    "meshio[all]>=5.3.5",
    "pydantic-xml>=2.17.3",
]

[build-system]
requires = ["uv_build>=0.8.13,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "autodoc-pydantic>=2.2.0",
    "pytest>=8.4.2",
    "sphinx>=8.2.3",
    "sphinx-autodoc-typehints>=3.2.0",
    "sphinx-rtd-theme>=3.0.2",
]
